<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cardiograph</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile">Tap to select,hold to edit</string>
    <string name="profile_add_user">Add User</string>
    <string name="profile_default">Default</string>
    <string name="history_record">History Record</string>
    <string name="history_label">Slide right to delete</string>
    <string name="shou_dong">Manual</string>
    <string name="zi_dong">Automatic</string>        
    <string name="shang_chuan">Upload</string>        
    <string name="delete">Delete</string>  
    <string name="ble">Bluetooth</string>  
    <string name="ble_connect">Connect</string>
    <string name="ble_disconnect">Disconnect</string>
    
   <!--  <string name="app_name">Ghostyu UART</string> -->
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    
    <!-- 登录 -->
    <string name="check_keep_acount">记住账号</string>
    <string name="check_keep_password">记住密码</string>
    <string name="find_login_password">找回密码</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="account">账号</string>
    <string name="login_dialog_message">您还没有登录，请先登录</string>
    <string name="reacquire">重新获取</string>
    <string name="phone_title0">登录用户名</string>
    <string name="plz_input_pwd">登录密码</string>
    <string name="register_tips">温馨提示：账号和密码不能为空，密码由6-20位英文字母、数字或符号组成</string>
    <string name="input_code">输入账号</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_confirm_pwd">重新输入密码</string>
    <string name="code_not_null">账号不能为空</string>
    <string name="PW_illegal_title">密码错误</string>
    <string name="PW_illegal_content">登录密码最少6位，最多20位。英文字母、数字和符号组成。不区分大小写。</string>
    <string name="PW_illegal_content0">登录密码过于简单，至少包含英文字母、数字和符号中的两种。</string>
    <string name="PW_illegal_content1">请输入6&#8211;20位登录密码</string>
    <string name="PW_illegal_error">两次密码输入不同</string>
</resources>
