<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res/com.example.cardiograph"
    style="@style/app_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/common_navigation_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="移动心电监测系统"
                android:textColor="@color/trueblack"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"/>
           <!-- <ImageView 
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="15dp"
               android:src="@drawable/icon_lkllogo"
               /> -->
           
           <RelativeLayout 
               android:layout_marginTop="0dp"
               android:layout_marginBottom="10dp"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
				style="@style/app_bg"
               >
               <TextView
                   android:id="@+id/tv_register"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/register"
                   android:layout_alignParentRight="true"
                   android:layout_marginRight="23dp"
                   android:textSize="@dimen/medium_text_size"
                   android:textColor="@color/text_green_blue_selector"
                   ></TextView>
               
           </RelativeLayout>

           <View
               android:layout_width="fill_parent"
               android:layout_height="1dp"
               android:background="@drawable/u11_line"
               ></View>
           
            <LinearLayout
                android:id="@+id/linearLayout_account_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/LinearLayout_account"
                    style="@style/combination_item_style"
                    android:padding="5dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal" 
                    android:background="@color/white"
                    >

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/id_phone_text"
                        style="@style/shoudan_text_medium_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:src="@drawable/icon_username"
                         />

                    <EditText
                        android:id="@+id/id_phone_edit"
                        style="@style/edit_text_style_account"
                        android:inputType="textEmailAddress"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@color/white"
                        android:hint="@string/phone_title0"
                        android:layout_gravity="center_vertical"
                         >
                    </EditText>
                </LinearLayout>

                <View 
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/u11_line"
                    />

                <LinearLayout
                    android:id="@+id/LinearLayout_pwd"
                    style="@style/combination_item_style"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_height="50dp"
                    android:background="@color/white"
                     >

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/id_passwor_text"
                        style="@style/shoudan_text_medium_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_inputpw"
                        android:gravity="center"/>

                    <EditText
                        android:id="@+id/id_passwor_edit"
                        style="@style/edit_text_style_account"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:imeOptions="actionGo"
                        android:background="@color/white"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/plz_input_pwd" >
                    </EditText>
                </LinearLayout>
                 <View 
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/u11_line"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:id="@+id/linearLayout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dip"
                android:layout_marginRight="13dip"
                android:gravity="center" >

                <CheckBox
                    android:id="@+id/keep_phone"
                    style="@style/mycheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_keep_password"
                    android:textColor="@color/trueblack"
                    android:textSize="@dimen/medium_text_size"
                    android:drawablePadding="1dp"
                    android:paddingRight="1dp"
                     />

                <TextView
                    android:id="@+id/find_login_PW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="10dip"
                    android:text="@string/find_login_password"
                    android:textColor="@color/text_green_blue_selector"
                    android:textSize="@dimen/medium_text_size" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >


                <com.cardiograph.component.BtnWithTopLine
                    android:id="@+id/login"
                    android:layout_marginTop="20dp"
                    style="@style/btn_top_line"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    apps:btn_text="@string/login"
                   />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>